Fix InfoThumb on mobile screens

--- a/src/components/elements/Thumbs/moviethumb.module.css
+++ b/src/components/elements/Thumbs/moviethumb.module.css
@@ -7,15 +7,18 @@
 }
 
 .image {
-  position: absolute;
-  top: 0;
-  left: 0;
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
   transition: all 0.3s;
   box-sizing: border-box;
+}
+
+.wrapper .image {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .title {
